--- a/style.css
+++ b/style.css
@@ -2,17 +2,26 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
-    background-color: #ddd;
+    background-color: #dcdad7;
+    font-size: 23px;
 }
 
 h1, h2 {
+    display: block;
     text-align: center;
     color: #333;
+    background-color: #007BFF;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    border-radius: 18px;
+    padding: 10px;
 }
 
 form {
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 label {
@@ -25,6 +34,7 @@ input[type="number"], input[type="text"] {
     padding: 5px;
     width: 150px;
     margin-bottom: 10px;
+    font-size: 21px;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -66,4 +76,30 @@ th, td {
 th {
     text-align: center;
     color: #000000;
+}
+
+#contenedor {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#contenedor > div {
+    width: 33%;
+}
+
+img {
+    display: block;
+    margin: auto;
+    max-width: 80%; 
+    height: auto;
+    opacity: 0.35; 
+}
+
+.rotate-left {
+    transform: rotate(-5deg);
+}
+
+.rotate-right {
+    transform: rotate(5deg);
 }
