--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
-/* Estilo general */
+:root{
+    --color-fondo: #fffedb;
+    --color-titulos: #383939;
+    --color-texto: #ededed;
+    --color-secundario: #38c958;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
-    background-color: #dcdad7;
+    --background-color: #dcdad7;
+    background-color: var(--color-fondo);
     font-size: 23px;
 }
 
 h1, h2 {
     display: block;
     text-align: center;
-    color: #333;
-    background-color: #007BFF;
+    color: #ededed;
+    background-color: var(--color-titulos);
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
@@ -49,8 +56,8 @@ input[type="number"] {
 
 input[type="submit"] {
     padding: 10px 20px;
-    background-color: #007BFF;
-    color: white;
+    background-color: var(--color-titulos);
+    color: var(--color-texto);
     border: none;
     cursor: pointer;
     border-radius: 5px;
@@ -65,17 +72,18 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    background-color: var(--color-secundario);
+    border-radius: 25px;
 }
 
 th, td {
     padding: 10px;
     text-align: center;
-    border-bottom: 1px solid #ddd;
 }
 
 th {
     text-align: center;
-    color: #000000;
+    color: var(--color-texto);
 }
 
 #contenedor {
@@ -85,21 +93,32 @@ th {
 }
 
 #contenedor > div {
-    width: 33%;
+    width: 50%;
+}
+
+#contenedor2{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#contenedor2 > div {
+    height: 33%;
 }
 
 img {
     display: block;
     margin: auto;
-    max-width: 80%; 
     height: auto;
     opacity: 0.35; 
 }
 
 .rotate-left {
+    max-width: 35%; 
     transform: rotate(-5deg);
 }
 
 .rotate-right {
+    max-width: 48%; 
     transform: rotate(5deg);
 }
