--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ h1, h2 {
     width: fit-content;
     border-radius: 18px;
     padding: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 form {
