--- a/style.css
+++ b/style.css
@@ -1,126 +1,120 @@
 :root{
-    --color-fondo: #fffedb;
-    --color-titulos: #383939;
-    --color-texto: #ededed;
-    --color-secundario: #38c958;
+    --titulos: #3d4649;
+    --secundario: #adbcc1;
+    --coral_intenso: #e72553;
+    --colar: #f29799;
+    --fondo_cajas: #6e7c82;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    --background-color: #dcdad7;
-    background-color: var(--color-fondo);
-    font-size: 23px;
+body{
+    background-color: whitesmoke;
 }
 
-h1, h2 {
+.textos {
     display: block;
     text-align: center;
-    color: #ededed;
-    background-color: var(--color-titulos);
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
     border-radius: 18px;
-    padding: 10px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
-form {
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
+h1.titulos{
+    background-color: var(--titulos);
+    color: whitesmoke;
 }
 
-label {
-    display: inline-block;
-    width: 100px;
-    margin-bottom: 10px;
+h5.descripcion {
+    background-color: var(--secundario);
+    padding-bottom: 1.5rem;
 }
 
-input[type="number"], input[type="text"] {
-    padding: 5px;
-    width: 150px;
-    margin-bottom: 10px;
-    font-size: 21px;
-}
-
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
+.tarjeta-resultado{
+    min-height: 300px;
+    padding: 0;
     margin: 0;
 }
 
-input[type="number"] {
-    -moz-appearance: textfield;
+.card-body{
+    background-color: var(--fondo_cajas);
 }
 
-input[type="submit"] {
-    padding: 10px 20px;
-    background-color: var(--color-titulos);
-    color: var(--color-texto);
-    border: none;
-    cursor: pointer;
+.card-body .card-title{
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: bold;
+    padding: 1rem;
+    margin:auto;
+    margin-bottom: 2em;
+    background-color: var(--titulos);
+    color:whitesmoke;
     border-radius: 5px;
 }
 
-input[type="submit"]:hover {
-    background-color: #0056b3;
-}
-
-/* Estilo de la tabla */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    background-color: var(--color-secundario);
-    border-radius: 25px;
-}
-
-th, td {
-    padding: 10px;
-    text-align: center;
-}
-
-th {
-    text-align: center;
-    color: var(--color-texto);
-}
-
-#contenedor {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-#contenedor > div {
-    width: 50%;
-}
-
-#contenedor2{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-
-#contenedor2 > div {
-    height: 33%;
-}
-
-img {
-    display: block;
+.card-body .output{
     margin: auto;
-    height: auto;
-    opacity: 0.35; 
+    padding: auto;
+    font-size: 2rem;
+    background-color: var(--colar);
+    border:none;
+    border-radius: 5px;
 }
 
-.rotate-left {
-    max-width: 35%; 
-    transform: rotate(-5deg);
+form{
+    padding: 1rem;
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+    margin: auto;
+    background-color: var(--secundario);
+    border-radius: 15px;
 }
 
-.rotate-right {
-    max-width: 48%; 
-    transform: rotate(5deg);
+#inputForm .form-control {
+    font-size: 1.5rem; 
+}
+
+#inputForm .btn {
+    font-size: 1rem;
+    background-color: var(--coral_intenso);
+    border: none;
+}
+
+#inputForm .input-group-text{
+    font-size: 1.5rem;
+}
+
+@media (max-width: 768px){
+    .card-body .card-title{
+        font-size: 2.5vh;
+    }
+
+    .tarjeta-resultado{
+        min-height: 100px;
+    }
+    .card-body .output{
+        margin: auto;
+        padding: auto;
+        font-size: 2vh;
+    }
+
+}
+
+@media (max-width:1052){
+    #inputForm .form-control {
+        font-size: 0.75rem; 
+    }
+    
+    #inputForm .btn {
+        font-size: 0.5rem; 
+    }
+    
+    #inputForm .input-group-text{
+        font-size: 0.75rem;
+    }
 }
